# config-gen

./: CMakeLists.txt  LICENSE  README.md  address.json  config-gen.cc  config-generic.h
tests/: CMakeLists.txt  test_helpers.h  test_object.cc  test_object.conf  test_type.cc  test_type.conf
